added tag and summary in swagger
