# l0708-self-reliance/swagger.json
@@ -10,25 +10,17 @@
     }
   },
   "host": "sierra341-07.onrender.com",
-  "servers": [
+  "basePath": "/",
+  "tags": [
     {
-      "url": "http://localhost:3000",
-      "description": "Development server for testing"
+      "name": "Courses",
+      "description": ""
     },
     {
-      "url": "http://localhost:3000/login",
-      "description": "Develoment login server for authorization"
-    },
-    {
-      "url": "https://sierra341-07.onrender.com",
-      "description": "Production server using Render"
-    },
-    {
-      "url": "https://sierra341-07.onrender.com/login",
-      "description": "Production login server for authorization"
+      "name": "Locations",
+      "description": ""
     }
   ],
-  "basePath": "/",
   "schemes": [
     "https"
   ],
@@ -42,6 +34,10 @@
     },
     "/courses/": {
       "get": {
+        "tags": [
+          "Courses"
+        ],
+        "summary": "Return list of all courses",
         "description": "This will get all self-reliance course records or documents <br/><br>",
         "produces": [
           "application/json"
@@ -57,6 +53,10 @@
         }
       },
       "post": {
+        "tags": [
+          "Courses"
+        ],
+        "summary": "Create course",
         "description": "This will create one self-reliance course using the data in JSON format.<br>  It will then return the ID of the new record if operation is successful.<br>  This operation requires a valid authorization.",
         "parameters": [
           {
@@ -117,6 +117,10 @@
     },
     "/courses/{courseID}": {
       "get": {
+        "tags": [
+          "Courses"
+        ],
+        "summary": "Find a course by ID",
         "description": "This will find one self-reliance course based on the custom ID called courseID.",
         "produces": [
           "application/json"
@@ -145,6 +149,10 @@
         }
       },
       "put": {
+        "tags": [
+          "Courses"
+        ],
+        "summary": "Updates course by ID",
         "description": "This will update the details of the self-reliance course based on the supplied custom   ID called courseID.<br>It will use the new information as supplied in JSON format.<br>  This operation requires a valid authorization.",
         "parameters": [
           {
@@ -206,6 +214,10 @@
         }
       },
       "delete": {
+        "tags": [
+          "Courses"
+        ],
+        "summary": "Deletes course by ID",
         "description": "This will remove the self-reliance course based on the supplied custom ID called courseID.<br>  This operation requires a valid authorization.",
         "parameters": [
           {
@@ -236,6 +248,10 @@
     },
     "/locations/": {
       "get": {
+        "tags": [
+          "Locations"
+        ],
+        "summary": "Return list of all locations",
         "description": "This will get all self-reliance location records or documents <br/><br>",
         "produces": [
           "application/json"
@@ -251,6 +267,10 @@
         }
       },
       "post": {
+        "tags": [
+          "Locations"
+        ],
+        "summary": "Create location",
         "description": "This will create one self-reliance location using the data in JSON format.<br>  It will then return the ID of the new record if operation is successful.<br>  This operation requires a valid authorization.",
         "parameters": [
           {
@@ -308,6 +328,10 @@
     },
     "/locations/{locationID}": {
       "get": {
+        "tags": [
+          "Locations"
+        ],
+        "summary": "Find a location by ID",
         "description": "This will find one self-reliance location based on the custom ID called locationID.",
         "produces": [
           "application/json"
@@ -333,6 +357,10 @@
         }
       },
       "put": {
+        "tags": [
+          "Locations"
+        ],
+        "summary": "Updates location by ID",
         "description": "This will update the details of the self-reliance location based on the supplied custom   ID called locationID.<br>It will use the new information as supplied in JSON format.<br>  This operation requires a valid authorization.",
         "parameters": [
           {
@@ -394,6 +422,10 @@
         }
       },
       "delete": {
+        "tags": [
+          "Locations"
+        ],
+        "summary": "Deletes location by ID",
         "description": "This will remove the self-reliance location based on the supplied custom ID called locationID.<br>  This operation requires a valid authorization.",
         "parameters": [
           {
